// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TilePreviewList should not display main button when main button url is blank 1`] = `
<pf-tile-preview-list
  model={[Function Object]}
>
  <table
    class="mt-3"
  >
    
    
    <tr>
      
      
      <td>
        
        
        <a
          class="m-0 p-0;"
          href="/marketdata/marketdata.asp?usersession_id=156025"
        >
          a new test project
        </a>
        
      </td>
      
      <td
        class="hideable"
      >
        
        <p
          class="d-inline"
          placement="top"
        >
          1
        </p>
        
        
      </td>
      
      <td
        class="hideable"
      >
        
        <p
          class="d-inline"
          placement="top"
        >
          02/07/2018
        </p>
        
        
      </td>
      
      <td
        class="w-10"
      >
        
        
        
      </td>
    </tr>
  </table>
</pf-tile-preview-list>
`;

exports[`TilePreviewList should show data with columns when data is given and showColumnHeadings is true 1`] = `
<pf-tile-preview-list
  model={[Function Object]}
>
  <a
    class="btn tile-preview-list-button p-1"
    href="mainButtonUrl"
  >
    <fa-icon />
     test button text
  
  </a><table
    class="mt-3"
  >
    
    <tr>
      
      
      <th>
         Project Name 
      </th>
      
      <th
        class="hideable"
      >
         # Jobs 
      </th>
      
      <th
        class="hideable"
      >
         Created 
      </th>
      
      <th
        class="w-10"
      >
          
      </th>
    </tr>
    
    <tr>
      
      
      <td>
        
        
        <a
          class="m-0 p-0;"
          href="/marketdata/marketdata.asp?usersession_id=156025"
        >
          a new test project
        </a>
        
      </td>
      
      <td
        class="hideable"
      >
        
        <p
          class="d-inline"
          placement="top"
        >
          1
        </p>
        
        
      </td>
      
      <td
        class="hideable"
      >
        
        <p
          class="d-inline"
          placement="top"
        >
          02/07/2018
        </p>
        
        
      </td>
      
      <td
        class="w-10"
      >
        
        
        
      </td>
    </tr>
  </table>
</pf-tile-preview-list>
`;

exports[`TilePreviewList should show data without columns when data is given and showColumnHeadings is false 1`] = `
<pf-tile-preview-list
  model={[Function Object]}
>
  <a
    class="btn tile-preview-list-button p-1"
    href="mainButtonUrl"
  >
    <fa-icon />
     test button text
  
  </a><table
    class="mt-3"
  >
    
    
    <tr>
      
      
      <td>
        
        
        <a
          class="m-0 p-0;"
          href="/marketdata/marketdata.asp?usersession_id=156025"
        >
          a new test project
        </a>
        
      </td>
      
      <td
        class="hideable"
      >
        
        <p
          class="d-inline"
          placement="top"
        >
          1
        </p>
        
        
      </td>
      
      <td
        class="hideable"
      >
        
        <p
          class="d-inline"
          placement="top"
        >
          02/07/2018
        </p>
        
        
      </td>
      
      <td
        class="w-10"
      >
        
        
        
      </td>
    </tr>
  </table>
</pf-tile-preview-list>
`;
